// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderExternalDef should render external definition with all placeholders set correctly 1`] = `"[@bs.module] external button : {.\\"root\\": string} = \\"./components/button.module.scss\\""`;

exports[`renderExternalDef should render external definition with placeholder if arg not provided 1`] = `"[@bs.module] external %identifier : %type = \\"%filepath\\""`;

exports[`renderStyleFileStr should render empty closed object type on empty input 1`] = `"{.}"`;

exports[`renderStyleFileStr should render empty files on empty input 1`] = `
"/**
* GENERATED VIA bs-css-modules-loader
* ---
* Do not modify this file manually.
* Edit the relevant scss file instead!
**/
"
`;

exports[`renderStyleFileStr should render file with multiple file entries 1`] = `
"/**
* GENERATED VIA bs-css-modules-loader
* ---
* Do not modify this file manually.
* Edit the relevant scss file instead!
**/

atest
dtest
htest
ztest"
`;

exports[`renderStyleFileStr should render object with multiple fields 1`] = `
"{.
\\"a\\": string,
\\"b\\": string
}"
`;

exports[`renderStyleFileStr should render object with one field 1`] = `
"{.
\\"a\\": string
}"
`;

exports[`renderTypeFields should not render comma in last line 1`] = `"\\"a\\": string"`;

exports[`renderTypeFields should render multiple fields 1`] = `
"\\"a\\": string,
\\"b\\": string"
`;

exports[`renderTypeFields should return empty string on empty input 1`] = `""`;
